@@ -1,3 +1,6 @@
+2006-06-12 Updated numerix.fft to handle numpy restructuring
+           Added ImportError to numerix.linear_algebra for numpy -TEO
+
 2006-06-11 Added quiverkey command to pylab and Axes, using
            QuiverKey class in quiver.py.  Changed pylab and Axes
            to use quiver2 if possible, but drop back to the
